@@ -1,3 +1,8 @@
+2009-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-header-line-insert): Don't decode url containing
+	non-ASCII characters already.  e.g. about://weather/WHERE
+
 2009-02-03  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* mew-w3m.el (mew-w3m-cid-retrieve): Remove a wrong set-buffer().
